fixed quotes/list bullets not showing up on experience list

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -184,6 +184,10 @@ hr {
     padding-bottom: 15px;
   }
 
+  .gutter {
+    padding: 0 25px;
+  }
+
   .caption h4 {
     margin-bottom: 0;
     &:last-of-type {
